remove stream() from PartitionHolder